# Think-Agentic

./: .gitignore
llmops/api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
llmops/api/app/: __init__.py  app_factory.py  main.py
llmops/api/app/alembic/: README  env.py
llmops/api/app/api/: deps.py  router.py
llmops/api/app/core/: config.py  errors.py  exceptions.py  logging.py  platform.py  security.py  tenant.py
llmops/api/app/domain/: __init__.py
llmops/api/app/infrastructure/: celery.py  db.py  redis.py  vector_store.py
llmops/api/app/integrations/: __init__.py
llmops/api/app/models/: __init__.py  account.py  account_setting.py  (+19 more)
llmops/api/docker/: entrypoint.sh
llmops/api/tests/: test_account_auth_routes.py  test_agent_adapter.py  test_agent_capability_service.py  test_agent_debug_runtime.py  test_agent_task_service.py  test_api_tool.py  test_api_tool_runtime.py  test_app.py  test_approval_policy_trace.py  test_assistant_agent.py  test_builtin_app_analysis.py  test_builtin_tool.py  test_capability_adapter.py  test_conversation.py  test_core_config.py  test_core_exceptions.py  test_dataset.py  test_db_facade.py  test_document_segment.py  test_files_route.py  test_health.py  test_integrations_oauth.py  test_language_model.py  test_openapi_web_app.py  test_platform_wechat_ai_audio.py  test_router_agent_manager_service.py  test_shared_paginator.py  test_shared_password.py  test_shared_response.py  test_task_engine_service.py  test_upload_file.py  test_vector_store.py  test_worker_runtime.py  test_workflow.py
(+774 files in other folders)
