[project]
name = "llmops-api"
version = "0.1.0"
description = "FastAPI API service for LLMOps Agent Platform"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "alembic>=1.13",
    "celery>=5.4",
    "fastapi>=0.115",
    "httpx>=0.27",
    "orjson>=3.10",
    "psycopg[binary]>=3.2",
    "pydantic>=2.8,<3.0",
    "pydantic-settings>=2.4",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.9",
    "redis>=5.0",
    "sqlalchemy>=2.0",
    "sse-starlette>=2.1",
    "structlog>=24.4",
    "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"app/api/**/*.py" = ["B008"]
"app/alembic/versions/*.py" = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
